--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -24,11 +24,19 @@
     src: artifact.tar.gz
     dest: ~/artifact.tar.gz
 
+- name: Creates directory
+  file:
+    path: /home/ubuntu/backend
+    state: directory
+
+- name: Extract artifact.tar.gz file
+  shell:
+    cmd: tar -xvzf artifact.tar.gz -C backend
+    chdir: /home/ubuntu
+
 - name: "use pm2 to run backend"
   shell: |
-    cd ~/home/ubuntu
-    tar -xvf artifact.tar.gz -C backend
     cd backend/
     npm install
-    pm2 stop default
-    pm2 start npm -- start
+    pm2 stop backend
+    pm2 start npm -i max --name "backend" -- run start:prod
