--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -39,4 +39,4 @@
     cd backend/
     npm install
     pm2 stop backend
-    pm2 start npm -i max --name "backend" -- run start:prod
+    pm2 start dist/main.js --name "backend" -i max
