--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -9,7 +9,7 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
   environment:
-    NODE_ENV: "{{ lookup('env','NODE_ENV') }}"
+    NODE_ENV: "production"
     VERSION: "{{ lookup('env','VERSION') }}"
     ENVIRONMENT: "{{ lookup('env','ENVIRONMENT') }}" 
     TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
