add revert-migrations stage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,39 @@ orbs:
   slack: circleci/slack@4.1
 
 commands:
-  destroy-environment:
+  destroy-environments:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      workflowid:
+      workflow_id:
         type: string
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            aws s3 rm s3://udapeople-<<parameters.workflowid>> --recursive
-            aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflowid>>
-            aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflowid>>
+            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
+            aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
+            aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
+
+  revert-migrations:
+    description: Revert the last migration
+    parameters:
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            SUCCESS=$(curl --insecure https://kvdb.io/E2EWQQcGaY9xGnoPaidEtG/migration_<<parameters.workflow_id>>)
+            # Logic for reverting the database state
+            if (( $SUCCESS == 1 ));
+            then
+                cd ~/project/backend
+                npm install
+                npm run migration:revert
+            fi
+
 jobs:
   build-frontend:
     docker:
@@ -165,8 +185,8 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
-      - destroy-environment:
-          workflowid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environments:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   configure-infrastructure:
     docker:
@@ -200,8 +220,8 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
-      - destroy-environment:
-          workflowid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environments:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   run-migrations:
     docker:
@@ -231,8 +251,8 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
-      - destroy-environment:
-          workflowid: "${CIRCLE_WORKFLOW_ID:0:7}"  
+      - destroy-environments:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
 
   deploy-frontend:
     docker:
@@ -264,8 +284,8 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
-      - destroy-environment:
-          workflowid: "${CIRCLE_WORKFLOW_ID:0:7}" 
+      - destroy-environments:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}" 
 
   deploy-backend:
     docker:
@@ -296,8 +316,8 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
-      - destroy-environment:
-          workflowid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environments:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   smoke-test:
     docker:
@@ -332,8 +352,10 @@ jobs:
             else
               return 1
             fi
-      - destroy-environment:
-          workflowid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environments:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
 workflows:
   default:
