--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -382,6 +382,43 @@ jobs:
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["73:2a:c1:d7:4b:10:1e:2f:cf:27:e0:34:22:60:0a:1e"]
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y curl jq
+      - run:
+          name: Remove old stacks and files
+          command: |
+            STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+              --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+
+            for stackitem in ${STACKS[@]}
+            do
+              echo $stackitem
+              echo $stackitem =~ "${CIRCLE_WORKFLOW_ID:0:7}"
+              if [[ ! $stackitem =~ .*"${CIRCLE_WORKFLOW_ID:0:7}".* ]]
+              then
+                echo "--------------- CLEAN OLD INFRASTRUCTURE ---------------"
+                unset OldWorkflowID
+                OldWorkflowID=$(echo $stackitem | sed -r 's/udapeople-.*-//g')
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              else
+                echo "--------------- CANNOT CLEAN ---------------"
+              fi
+            done
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
+
 workflows:
   default:
     jobs:
@@ -401,6 +438,9 @@ workflows:
           requires: [build-backend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
@@ -413,3 +453,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
