--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -37,3 +37,11 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+  EIP:
+    Type: AWS::EC2::EIP
+    Properties:
+        InstanceId: !Ref EC2Instance
+        Tags:
+        - Key: Name
+          Value: !Sub Elastic IP for our Server backend-${ID}
